fix scrolling on ios

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -22,6 +22,12 @@
   flex: 1;
 }
 
+.app-is-mobile .app-sidenav-container {
+  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+     `<body>` to be our scrolling element for mobile layouts. */
+  flex: 1 0 auto;
+}
+
 .app-content {
   margin: 0 auto;
   padding-top: 2em;
@@ -36,12 +42,6 @@
     position: fixed;
     /* Make sure the toolbar will stay on top of the content as it scrolls past. */
     z-index: 2;
-  }
-
-  .app-sidenav-container {
-    /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
-   `<body>` to be our scrolling element for mobile layouts. */
-    flex: 1 0 auto;
   }
 
   .app-content {
